--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ nav {
 .logo-img {
     width: 50px;
     height: 50px;
-    object-fit: contain;
+    object-fit: cover;
     border-radius: 0%;
     background: white;
     padding: 5px;
